2008-03-09  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Treat <input type=hidden> as if it were a
	white space (HTML5 revision 1331).

2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Ignore U+000A at the beginning of a |listing|
	element (HTML5 revision 1330).

2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: <title> is always appended to the current
	element (HTML5 revision 1328).

2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: White space in tainted tables are moved
	into foster parents (HTML5 revision 1326).

2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Reduce errors from foster parenting cases (HTML5
	revision 1321).

2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |</h/n/>| case code rearranged to align with
	the spec (HTML5 revision 1320).  Note that we finally complete
	all of HTML5 revision 1320 changes.

2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |</form>| now works similar to |</div>| for unclosed
	tags (HTML5 revision 1320).

2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |</p>| case rearranged with no actual change in fact.

2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: A "generate implied end tags" code (t409.1)
	could not be reached so that it is now removed (HTML5 revision
	1320).

2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Code for the case of |</div>| and so on are revised
	to align with new spec text (HTML5 revision 1320).

2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Remove strange |if| condition; however, it should
	have had no harm in theory.

2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_tree_construction_main): '</p>' in body
	case is split from other end tags for the preparation
	of implementing HTML revision 1320.

2008-03-07  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Simplified "generate implied end tag" (HTML5
	revision 1320).

2008-03-07  Wakaba  <wakaba@suika.fam.cx>
