@@ -1,6 +1,6 @@
 package Whatpm::HTML;
 use strict;
-our $VERSION=do{my @r=(q$Revision: 1.98 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+our $VERSION=do{my @r=(q$Revision: 1.99 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 use Error qw(:try);
 
 ## ISSUE:
@@ -3338,7 +3338,15 @@ sub _tree_construction_main ($) {
     } elsif ($self->{insertion_mode} & HEAD_IMS) {
       if ($token->{type} == CHARACTER_TOKEN) {
         if ($token->{data} =~ s/^([\x09\x0A\x0B\x0C\x20]+)//) {
-          $self->{open_elements}->[-1]->[0]->manakai_append_text ($1);
+          unless ($self->{insertion_mode} == BEFORE_HEAD_IM) {
+            !!!cp ('t88.2');
+            $self->{open_elements}->[-1]->[0]->manakai_append_text ($1);
+          } else {
+            !!!cp ('t88.1');
+            ## Ignore the token.
+            !!!next-token;
+            redo B;
+          }
           unless (length $token->{data}) {
             !!!cp ('t88');
             !!!next-token;
@@ -6458,4 +6466,4 @@ package Whatpm::HTML::RestartParser;
 push our @ISA, 'Error';
 
 1;
-# $Date: 2008/03/09 03:23:43 $
+# $Date: 2008/03/09 03:46:43 $
