@@ -1,7 +1,7 @@
 1..1502
 # Running under perl version 5.008007 for linux
-# Current time local: Sun Mar  9 12:20:12 2008
-# Current time GMT:   Sun Mar  9 03:20:12 2008
+# Current time local: Sun Mar  9 12:42:48 2008
+# Current time GMT:   Sun Mar  9 03:42:48 2008
 # Using Test.pm version 1.25
 # t/content-model-1.dat
 ok 1
