@@ -1,7 +1,7 @@
 1..1734
 # Running under perl version 5.008007 for linux
-# Current time local: Sun Mar  9 12:19:27 2008
-# Current time GMT:   Sun Mar  9 03:19:27 2008
+# Current time local: Sun Mar  9 12:42:10 2008
+# Current time GMT:   Sun Mar  9 03:42:10 2008
 # Using Test.pm version 1.25
 ok 1
 ok 2
