@@ -1,5 +1,10 @@
 2008-03-09  Wakaba  <wakaba@suika.fam.cx>
 
+	* tree-test-1.dat, tree-test-2.dat: Test data on white space
+	between <html> and <head> are added (HTML5 revision 1332).
+
+2008-03-09  Wakaba  <wakaba@suika.fam.cx>
+
 	* tree-test-1.dat: More tests are added for foster parenting (HTML5
 	revision 1331 and so on).
 
