@@ -1,5 +1,10 @@
 2008-03-09  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm.src: Ignore white space characters between <html>
+	and <head> (HTML5 revision 1332).
+
+2008-03-09  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML.pm.src: Treat <input type=hidden> as if it were a
 	white space (HTML5 revision 1331).
 
